Fix the empty text vertical alignment of the textareas.

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -16,8 +16,9 @@ h1 {
   width: 300px;
   height: 100px;
   margin: 10px;
-
   display: inline-block;
+  vertical-align: top;
+
   text-align: left;
   border: 1px solid #ccc;
   padding: 5px;
